--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,11 +6,14 @@
 <body>
 <div th:fragment="footer">
     <div class="container">
-        <footer>
+        <footer class="page-footer font-small blue fixed-bottom">
             <span sec:authorize="isAuthenticated()">| Logged user: <span sec:authentication="name"></span> |
                 Roles: <span sec:authentication="principal.authorities"></span> |
-                <a th:href="@{/logout}">Sign Out</a>
+                <a th:href="@{/logout}">Выйти</a>
             </span>
+            <div class="footer-copyright text-center py-3">© 2020
+                <a href="#">РОСАТОМ Платформа отчетов</a>
+            </div>
             <script type="text/javascript" th:src="@{/resources/js/jquery.min.js}"></script>
             <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
         </footer>
