--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,9 +26,8 @@
                             <p><span class="fa fa-lock"></span><input type="password"  Placeholder="Password" required></p> <!-- JS because of IE support; better: placeholder="Password" -->
 
                             <div>
-                                <span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Forgot
-                                password?</a></span>
-                                <span style="width:50%; text-align:right;  display: inline-block;"><input type="submit" value="Sign In"></span>
+                                <span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Забыли пароль?</a></span>
+                                <span style="width:50%; text-align:right;  display: inline-block;"><input type="submit" value="Войти"></span>
                             </div>
 
                         </fieldset>
