--- a/src/main/resources/templates/catalog/CurrencyRates.html
+++ b/src/main/resources/templates/catalog/CurrencyRates.html
@@ -9,9 +9,31 @@
 <body>
 <div th:replace="fragments/header :: header"/>
     <div class="container">
-        <a th:href="@{/extension/form}">Добавить</a>
+        <table class="table table-bordered" id="messages" width="100%" cellspacing="0">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Код валюты </th>
+                <th>Символьный код валюты </th>
+                <th>Наименование валюты</th>
+                <th>Единицы</th>
+                <th>Цена</th>
+            </tr>
+            </thead>
+            <tbody>
+
+                <tr th:each ="rate : ${currencyRates}">
+                    <td th:utext="${rate.id}">...</td>
+                    <td th:utext="${rate.numCode}">...</td>
+                    <td th:utext="${rate.charCode}">...</td>
+                    <td th:utext="${rate.nominal}">...</td>
+                    <td th:utext="${rate.name}">...</td>
+                    <td th:utext="${rate.value}">...</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-<!-- /.container -->
+
 
 <div th:replace="fragments/footer :: footer"/>
 
