--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,6 +25,10 @@
                             <p ><span class="fa fa-user"></span><input class="user_field" type="text"  Placeholder="Username" required></p> <!-- JS because of IE support; better: placeholder="Username" -->
                             <p><span class="fa fa-lock"></span><input class="password_field" type="password"  Placeholder="Password" required></p> <!-- JS because of IE support; better: placeholder="Password" -->
 
+                            <div class="error_message">
+
+                            </div>
+
                             <div>
                                 <span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Забыли пароль?</a></span>
                                 <span style="width:50%; text-align:right;  display: inline-block;"><input class="enter_btn" type="submit" value="Войти"></span>
