--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,6 +28,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/report/balance}">Остатки на счетах<span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/catalog}">Справочники<span class="sr-only">(current)</span></a>
+                </li>
                <!-- <li class="nav-item">
                     <a class="nav-link" th:href="@{/table1}">Table1</a>
                 </li>
