Сделала загрузку справочника в выпадающие списки

--- a/src/main/resources/templates/report/balance-form.html
+++ b/src/main/resources/templates/report/balance-form.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://thymeleaf.org ">
 <head>
     <title>Spring Boot Thymeleaf + Spring Security</title>
 
@@ -19,22 +21,30 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <div class="form-group">
-                            <label for="legalId">Организация</label>
-                            <select class="form-control form-control-sm" id="legalId" name="legalId">
-                                <option value="" selected="selected"></option>
-                                <option value="1">ООО Цветочки</option>
-                                <option value="2">ООО Ягодки</option>
-                            </select>
-                            <!--<small id="legalIdHelp" class="form-text text-muted">Выбор юридического лица</small>-->
-                        </div>
-                        <div class="form-group">
-                            <label for="bankBik">БИК банка</label>
-                            <select class="form-control form-control-sm" id="bankBik" name="bankBik">
-                                <option value="" selected="selected"></option>
-                                <option value="1">0123</option>
-                                <option value="2">4567</option>
-                            </select>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-6">
+                                <div class="form-group">
+                                    <label for="legalId">Организация</label>
+                                    <select class="form-control form-control-sm" id="legalId" name="legalId">
+                                        <option value="" selected="selected"></option>
+                                        <option th:each="org : ${organizations}"
+                                                th:value="${org.id}"
+                                                th:text="${org.shortName}">
+                                        </option>
+                                    </select>
+                                    <!--<small id="legalIdHelp" class="form-text text-muted">Выбор юридического лица</small>-->
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                                <div class="form-group">
+                                    <label for="bankBik">БИК банка</label>
+                                    <select class="form-control form-control-sm" id="bankBik" name="bankBik">
+                                        <option value="" selected="selected"></option>
+                                        <option value="1">0123</option>
+                                        <option value="2">4567</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="bankName">Наименование банка</label>
@@ -49,8 +59,10 @@
                                 <label for="currencyId">Валюта</label>
                                 <select class="form-control form-control-sm" id="currencyId" name="currencyId">
                                     <option value="" selected="selected"></option>
-                                    <option value="1">RUB</option>
-                                    <option value="2">EUR</option>
+                                    <option th:each="okv : ${okvCodes}"
+                                            th:value="${okv.id}"
+                                            th:text="${okv.charcode}">
+                                    </option>
                                 </select>
                             </div>
                             <div class="col-xs-12 col-sm-6">
@@ -86,9 +98,10 @@
                             <div class="col-xs-12 col-sm-6">
                                 <label for="amountCurrencyId">Валюта</label>
                                 <select class="form-control form-control-sm" id="amountCurrencyId" name="amountCurrencyId">
-                                    <option value="" selected="selected"></option>
-                                    <option value="1">RUB</option>
-                                    <option value="2">EUR</option>
+                                    <option th:each="okv : ${okvCodes}"
+                                            th:value="${okv.id}"
+                                            th:text="${okv.charcode}">
+                                    </option>
                                 </select>
                             </div>
                             <div class="col-xs-12 col-sm-6">
