--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,6 +31,12 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/catalog}">Справочники<span class="sr-only">(current)</span></a>
                 </li>
+
+                <li th:if="${perms.admin}" class="nav-item active">
+                    <a class="nav-link" th:href="@{/settings}">Настройки<span class="sr-only">(current)</span></a>
+                </li>
+
+
                <!-- <li class="nav-item">
                     <a class="nav-link" th:href="@{/table1}">Table1</a>
                 </li>
