--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,8 @@
     <div th:fragment="header-css">
         <!-- this is header-css -->
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </div>
 </head>
 <body>
@@ -15,9 +17,9 @@
 <div th:fragment="header">
     <!-- this is header -->
     <nav class="navbar navbar-expand-lg navbar-dark static-top" style="background-color: #0c2c8c;">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Плот</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><img th:src="@{/resources/css/logo.png}" alt="Платформа отчетов 'ПлОт'"/> </span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
