--- a/src/main/resources/templates/catalog/Bics.html
+++ b/src/main/resources/templates/catalog/Bics.html
@@ -9,22 +9,29 @@
 <body>
 <div th:replace="fragments/header :: header"/>
     <div class="container">
-        <table class="table table-bordered" id="messages" width="100%" cellspacing="0">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>Наименование организации </th>
-                <th>БИК </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th>-</th>
-                <th>-</th>
-                <th>-</th>
-            </tr>
-            </tbody>
-        </table>
+        <h2>Справочник кредитных организаций <span class="badge badge-secondary"></span></h2>
+        <br>
+        <div class="row">
+        <div class="bs-example">
+            <table class="table" width="100%" cellspacing="0">
+                <thead class="thead-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Наименование организации </th>
+                    <th>БИК </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th>-</th>
+                    <th>-</th>
+                    <th>-</th>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        </div>
+
     </div>
 
 
