--- a/src/main/resources/templates/catalog/CurrencyRates.html
+++ b/src/main/resources/templates/catalog/CurrencyRates.html
@@ -9,6 +9,37 @@
 <body>
 <div th:replace="fragments/header :: header"/>
     <div class="container">
+        <h2>Справочник курсов валют <span class="badge badge-secondary"></span></h2>
+        <br>
+        <div class="row">
+        <div class="bs-example">
+            <table class="table" width="100%" cellspacing="0">
+                <thead class="thead-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Код валюты </th>
+                    <th>Символьный код валюты </th>
+                    <th>Наименование валюты</th>
+                    <th>Единицы</th>
+                    <th>Цена</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                <tr th:each ="rate : ${currencyRates}">
+                    <td th:utext="${rate.id}">...</td>
+                    <td th:utext="${rate.okv.numcode}">...</td>
+                    <td th:utext="${rate.okv.charcode}">...</td>
+                    <td th:utext="${rate.nominal}">...</td>
+                    <td th:utext="${rate.okv.name}">...</td>
+                    <td th:utext="${rate.value}">...</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        </div>
+
+
         <table class="table table-bordered" id="messages" width="100%" cellspacing="0">
             <thead>
             <tr>
