--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -14,8 +14,9 @@
             <div class="footer-copyright text-center py-3">© 2020
                 <a href="#">РОСАТОМ Платформа отчетов</a>
             </div>
-            <script type="text/javascript" th:src="@{/resources/js/jquery.min.js}"></script>
             <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+            <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         </footer>
     </div>
 
