Заготовки для xls

--- a/src/main/resources/templates/report/balance-form.html
+++ b/src/main/resources/templates/report/balance-form.html
@@ -72,25 +72,25 @@
                         </div>
                         <div class="form-group">
                             <label for="contractType">Вид договора</label>
-                            <input type="text" class="form-control" id="contractType" name="contractType" th:field="*{typeDog}"> <!--th:field="*{typeDog}"-->
+                            <input type="text" class="form-control" id="contractType" name="contractType"> <!--th:field="*{typeDog}"-->
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-sm-4">
                                 <div class="form-group">
                                     <label for="signContractDate">Дата заключения договора</label>
-                                    <input type="date" class="form-control" id="signContractDate" name="signContractDate" th:field="*{signDog}"> <!--th:field="*{signDog}"-->
+                                    <input type="date" class="form-control" id="signContractDate" name="signContractDate" > <!--th:field="*{signDog}"-->
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-4">
                                 <div class="form-group">
                                     <label for="beginContractDate">Дата начала действия договора</label>
-                                    <input type="date" class="form-control" id="beginContractDate" name="beginContractDate" th:field="*{startDog}"> <!--th:field="*{startDog}"-->
+                                    <input type="date" class="form-control" id="beginContractDate" name="beginContractDate" > <!--th:field="*{startDog}"-->
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-4">
                                 <div class="form-group">
                                     <label for="endContractDate">Дата окончания договора</label>
-                                    <input type="date" class="form-control" id="endContractDate" name="endContractDate" th:field="*{endDog}"> <!--th:field="*{endDog}"-->
+                                    <input type="date" class="form-control" id="endContractDate" name="endContractDate" > <!--th:field="*{endDog}"-->
                                 </div>
                             </div>
                         </div>
