Фронт. Вёрстка select'ора дял ЭЦП

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -172,3 +172,73 @@ fieldset{
     margin-bottom: 10px;
     margin-top: -18px;
 }
+
+.auth_type {
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+    bottom: -58px;
+    color: #6cb6f9;
+    font-size: 22px;
+    width: 225px;
+}
+
+.selection_wrapper {
+    display: flex;
+
+
+}
+.auth_type__selection {
+    cursor: pointer;
+    transition: color 0.3s;
+}
+.auth_type__selection:hover {
+    color: #fff;
+}
+
+.animated_underscore__left {
+    position: absolute;
+    left: 8px;
+    bottom: -6px;
+    width: 149px;
+    height: 2px;
+    background: #ffffff;
+    transition: left 0.4s, width 0.4s;
+}
+
+.animated_underscore__right {
+    position: absolute;
+    /* right: 8px; */
+    bottom: -6px;
+    width: 46px;
+    height: 2px;
+    background: #ffffff;
+    transition: left 0.4s, width 0.4s;
+    left: 172px;
+}
+#login {
+    overflow: hidden;
+    display: flex;
+}
+.form_slider_wrapper {
+    position: relative;
+    display: flex;
+    min-width: 650px;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    transition: left 0.4s;
+    left: 0;
+}
+
+.form_slider_wrapper__ecp {
+    left: -365px;
+}
+
+/*left: -301px;*/
+.default_select {
+    width: 300px;
+    height: 30px;
+    font-size: 19px;
+    margin-bottom: 10px;
+}
