--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,30 +17,46 @@
         <center>
             <div class="middle">
                 <div id="login">
+                    <div class="form_slider_wrapper">
+                        <form class="" action="javascript:void(0);" method="get">
 
-                    <form action="javascript:void(0);" method="get">
+                            <fieldset class="clearfix auth_form">
 
-                        <fieldset class="clearfix auth_form">
+                                <p ><span class="fa fa-user"></span><input class="user_field" type="text"  Placeholder="Username" required></p> <!-- JS because of IE support; better: placeholder="Username" -->
+                                <p><span class="fa fa-lock"></span><input class="password_field" type="password"  Placeholder="Password" required></p> <!-- JS because of IE support; better: placeholder="Password" -->
 
-                            <p ><span class="fa fa-user"></span><input class="user_field" type="text"  Placeholder="Username" required></p> <!-- JS because of IE support; better: placeholder="Username" -->
-                            <p><span class="fa fa-lock"></span><input class="password_field" type="password"  Placeholder="Password" required></p> <!-- JS because of IE support; better: placeholder="Password" -->
+                                <div class="error_message">
 
-                            <div class="error_message">
+                                </div>
 
-                            </div>
+                                <div>
+                                    <span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Забыли пароль?</a></span>
+                                    <span style="width:50%; text-align:right;  display: inline-block;"><input class="enter_btn" type="submit" value="Войти"></span>
+                                </div>
 
+                            </fieldset>
+                            <div class="clearfix"></div>
+                        </form>
+
+                        <form class="" action="javascript:void(0);" method="get">
+                            <select class="default_select">
+                                <option>Выберите цифровую подпись</option>
+                            </select>
                             <div>
-                                <span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Забыли пароль?</a></span>
-                                <span style="width:50%; text-align:right;  display: inline-block;"><input class="enter_btn" type="submit" value="Войти"></span>
+                                <span style="width:50%; text-align:right;  display: inline-block;"><input class="enter_with_ecp_btn" type="submit" value="Войти"></span>
                             </div>
-
-                        </fieldset>
-                        <div class="clearfix"></div>
-                    </form>
-
+                        </form>
+                    </div>
                     <div class="clearfix"></div>
 
                 </div> <!-- end login -->
+                <div class="auth_type">
+                    <div class="selection_wrapper">
+                        <div class="auth_type__selection login_passw_btn">Email / Пароль</div>
+                        <div class="auth_type__selection ecp_btn">ЭЦП</div>
+                    </div>
+                    <div class="animated_underscore animated_underscore__left"></div>
+                </div>
                 <div class="logo">
                     <span class="name">ПлОт</span>
                     <br/>
